Added function
Added a function for starting Maven with increased
memory settings.